# weread-skill-desktop

./: .gitignore  AGENTS.md  CHANGELOG.md  CNAME  README.md  aichat-plan.md  design.md  feature_list.json  index.html  init.sh  latest.json  mvp-design-doc.md  package-lock.json  package.json  progress.md  session-handoff.md  ui-style-guide.md  weread-desktop-plan.md
.github/workflows/: ci.yml  release.yml
docs/: advanced-report-implementation-plan.md  ai-chat-skill-agent-plan.md  current-context.md  ima-connector-implementation-plan.md  requirements-pool.md
docs/archive/: completed-requirements.md
landing/: index.html
scripts/: release-tag.sh
skills/: .redskill-lock.json
skills/xhs-visual-director-skill/: .redskill-installed
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/prompts/: README.md  system.md
src-tauri/skills/weread/: SKILL.md  manifest.json  notes.md  readdata.md  review.md  search.md  shelf.md
src-tauri/src/: advanced_report.rs  agent_bridge.rs  agent_gateway.rs  api.rs  cache.rs  commands.rs  config.rs  custom_templates.rs  export.rs  ima.rs  lib.rs  llm_chat.rs  main.rs  report.rs  report_design.rs  skill_registry.rs  state.rs  system_prompt.rs  telemetry.rs  types.rs
src-tauri/src/advanced_report/: prompts.rs  templates.rs  validation.rs
src/components/: RewardDialog.tsx
src/hooks/: useAdvancedReport.ts  useAgentBridge.ts  useAllNotes.ts  useBookshelf.ts  useExport.ts  useImaConnector.ts  useNotebooks.ts  useNotes.ts  (+4 more)
(+50 files in other folders)
